Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35209

5.2.0 RC1 doc bug: Link to Qt enums missing

XMLWordPrintable

    • 1fc28716e67cb9a4384c99c39e8a283ca344e771

      In modularized documentation, some links to other modules' pages are generated with the wrong module name and directory.

      For example:
      http://doc-snapshot.qt-project.org/qt5-stable/qimageioplugin.html#Capability-enum
      ...has a link to QFlags.

      In the single directory output, the link works, but in modularized documentation, the link is generated to be
      "qtgui/qflags.html"
      it should be
      "qtcore/qflags.html"

        For Gerrit Dashboard: QTBUG-35209
        # Subject Branch Project Status CR V

            gbk Martin Smith (Qt)
            jerome.pasion Jerome Pasion
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes